o re-indent and documented (mostly) JMXAdapter  o moved server.invoke() in Deployer to Deployer.invoke(), which will    decode JMX exceptions.